--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,6 @@
-<h1></h1>
-<p>Let us know if we can improve the site, or if there are any charts or views you want us to generate for CrunchBase statistics</p>
+<div class="label">
+    <h3 class= "container">Contact Us</h1>
+</div>
+<section class="container">
+	<iframe src="https://docs.google.com/forms/d/1gc0lIPjrOD0qCdbb9UZKv_2d8RsQNL7iXeOVNtw8u9g/viewform?embedded=true" width="760" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</section>
