--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -76,9 +76,6 @@ i, em{
 }
 
 /*----custom styles----*/
-a{
-  text-decoration: none
-}
 
 .left{
   float: left;
@@ -87,25 +84,10 @@ a{
 body{
   font-family: sans-serif;
 }
-.show_page{
-/*  background: radial-gradient(rgb(235,235,245),rgb(190,185,200));
-*/}
 .label{
   background: rgba(55,125,60,.3);
   margin-bottom: 20px;
   text-transform: uppercase;
-}
-.co_info{
-  background: #abc;
-  height: 100%
-}
-.content{
-  background: #fbc;
-  height: 100%;
-}
-.sponsors{
-  background: #fdb;
-  height: 100%;
 }
 /*----typograpgy----*/
 
@@ -131,7 +113,6 @@ h4{
 h5{
   font-size: 16px;
   line-height: 20px;
-  text-shadow: 0 1px 1px #9d9;
 }
 p{
   font-size: 16px;
@@ -147,15 +128,6 @@ header h1{
   font-family: 'Open Sans Condensed','helvetica neue', helvetica, arial, sans-serif;
   position: relative;
   left: 20px;
-}
-.show_page h4{
-  border-bottom: 2px solid #ccc;
-  padding: 5px 10px;
-
-}
-.co_info h4{
-  display: block;
-  margin-left: 10px;
 }
 /*----links----*/
 a{
@@ -183,21 +155,24 @@ dt{
 
 /*----misc styles----*/
 
-.map{
-  border: solid;
-}
-.center{
-  text-align: center;
-}
 .bling{
   color: rgb(55,125,60);
   font-weight: 700;
 }
-
+.center{
+  text-align: center;
+}
+.map{
+  border: solid;
+}
+.under{
+  border-bottom: 2px dotted #bbb;
+  margin-bottom: 20px;
+  padding: 10px 0;
+}
 caption{
   font-family: 'Droid Sans', 'helvetica neue', helvetica, arial, sans-serif;
-  font-size: 21px;
-  font-weight: bold;
+  font-size: 24px;
   padding: 15px;
   text-align: center;
 }
@@ -206,13 +181,10 @@ select{
   font-size: 18px;
   margin: 10px 0;
 }
-/*-----------ALL THIS STUFF WILL PROBABLY GO AWAY--------*/
 .section_nav{
   padding-left: 50px;
 }
 .section_nav a{
-  /*background: linear-gradient(rgb(245,245,245),rgb(220,220,220));*/
-  border: 1px solid #ddd;
   border-radius: 3px;
   color: #666;
   display: inline-block;
@@ -224,13 +196,11 @@ select{
   width: 230px;
 }
 .section_nav a:hover{
-  background: linear-gradient(rgb(235,235,235),rgb(205,205,205));
+  text-decoration: underline;
 }
-
-/*---------ALL THE WAY TO HERE----------*/
 table{
   border: 1px solid #999;
-  margin: 20px auto;
+  margin: 0 auto;
 }
 th{
   background: #e9e9ee;
@@ -238,7 +208,8 @@ th{
   font-family: 'Open Sans Condensed','helvetica neue', helvetica, arial, sans-serif;
   font-size: 18px;
   font-weight: 500;
-  padding: 10px 30px 10px 5px;
+  padding: 10px 10px;
+  text-align: center;
 }
 td{
   font-family: 'helvetica neue', helvetica, arial, sans-serif;
@@ -262,9 +233,16 @@ tfoot td{
   font-size: 12px;
   text-align: right;
 }
-
+.currency{
+  padding-right: 30px;
+  text-align: right;
+}
 .search-icon {
   height: 15px;
+}
+.sortable th:hover{
+  /*background: url('power.png');*/
+  background: #987;
 }
 
 /*----header----*/
@@ -280,11 +258,6 @@ header{
   height: 400px;
   width: 100%;
 }
-#banner_1 p{
-  font-size: 21px;
-  line-height: 28px;
-  padding-top: 30px;
-}
 #banner_2{
   background: url('bridge.jpg') no-repeat 0 -400px;
   background-position: center;
@@ -293,41 +266,33 @@ header{
   width: 100%;
 }
 .banner_text{
-  background: radial-gradient(
-    rgba(45,145,25,.7),
-    rgba(25,120,25,.8));
   color: #fff;
   margin-top: 40px;
   padding-top: 30px;
 }
-.banner_text_left,
-.banner_text_right{
-  color: #fff;
-  margin-top: 60px;
-  padding: 40px;
-  width: 450px;
+.banner_text p{
+  font-family: serif;
+  font-size: 18px;
+  line-height: 28px;
+  padding-top: 30px;
 }
-.banner_text_left{
+#banner_1 .banner_text{
+  background: rgba(25,120,25,.8);
+}
+#banner_2 .banner_text{
   background: rgba(220,100,60,.6);
-  float: left;
 }
-.banner_text_right{
-  background: rgba(55,125,60,.6);
-  float: right;
-}
-.banner_text_left a,
-.banner_text_right a{
+.banner_text a{
   border: 1px solid #fff;
   color: #fff;
   display: block;
-  margin-top: 15px;
+  margin: 15px 10px;
   padding: 15px;
   text-align: center;
   text-decoration: none;
   width: 100px;
 }
-.banner_text_left a:hover,
-.banner_text_right a:hover{
+.banner_text a:hover{
   background-color: rgba(255,255,255,.3);
 }
 /*----nav----*/
@@ -365,9 +330,7 @@ footer a:hover{
 }
 /*----footer----*/
 footer{
-/*  background: linear-gradient(to top right, rgba(55,125,60,.8), rgba(55,125,60,.5));
-*/ 
-  background-color: rgb(50,145,45);
+  background-color: rgba(55,125,60,.8);
   margin-top: 10px;
   padding-top: 20px;
   width: 100%;
