--- a/app/views/investments/index.html.erb
+++ b/app/views/investments/index.html.erb
@@ -1,41 +1,43 @@
 <script>
-      $(document).ready(function() {
-       $("h7").on("click", function() {
-          $("#facebook").slideToggle();
-        });
-      });
-
-  </script>
-
+  $(document).ready(function() {
+  $("h7").on("click", function() {
+  $("#facebook").slideToggle();
+  });
+  });
+</script>
 <div class="label">
     <h3 class= "container">Listing investments</h1>
 </div>
-
-
-<h3>Ideas for page:</h3>
-<h7>hello</h7>
-<h4>Top Investors by Round</h4>
-<h4>Biggest Rounds for Time Period</h4>
-<h4>Biggest Rounds for Time Period by Location</h4>
-<h4>Biggest Rounds for Time Period by Location</h4>
-<table class= "sortable">
-  <tr>
-    <th>Funding Round </th>
-    <th>Company Being Funded</th>
-    <th>Type</th>
-    <th>Investor</th>
-  </tr>
-
-<% @investments.each do |investment| %>
-    <% if investment.investable==nil %>
-        <% next %>
-    <% end %>
-  <tr id="<%= investment.funding.company.perma %>">
-    <td><%= Funding.find_by_id(investment.funding_id).funding_code %></td>
-    <td><%= link_to investment.funding.company.name, investment.funding.company %></td>
-    <td><%= investment.investable_type %></td>
-    <td><%= link_to investment.investable.perma, investment.investable %></td>
-  </tr>
-<% end %>
-</table>
-<br />
+<section class="container">
+  <h3>Ideas for page:</h3>
+  <h7>hello</h7>
+  <h4>Top Investors by Round</h4>
+  <h4>Biggest Rounds for Time Period</h4>
+  <h4>Biggest Rounds for Time Period by Location</h4>
+  <h4>Biggest Rounds for Time Period by Location</h4>
+  <table class= "sortable">
+    <caption>Table Name</caption>
+    <thead>
+      <tr>
+        <th>Funding Round </th>
+        <th>Company Being Funded</th>
+        <th>Type</th>
+        <th>Investor</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @investments.each do |investment| %>
+      <% if investment.investable==nil %>
+      <% next %>
+      <% end %>
+      <tr id="<%= investment.funding.company.perma %>">
+        <td><%= Funding.find_by_id(investment.funding_id).funding_code %></td>
+        <td><%= link_to investment.funding.company.name, investment.funding.company %></td>
+        <td><%= investment.investable_type %></td>
+        <td><%= link_to investment.investable.perma, investment.investable %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br />
+</section>
